SUBDIRS = Backgrounds Defaults IconSets Icons Pixmaps Styles Themes

prefsdatadir = $(pkgdatadir)

prefsdata_DATA =\
	README\
	README.themes\
	autostart.sh\
	exitscript.sh\
	menu\
	menu.ca\
	menu.cz\
	menu.da\
	menu.de\
	menu.el\
	menu.es\
	menu.fi\
	menu.fr\
	menu.gl\
	menu.he\
	menu.hr\
	menu.hu\
	menu.it\
	menu.ja\
	menu.ko\
	menu.nl\
	menu.no\
	menu.pl\
	menu.pt\
	menu.ru\
	menu.se\
	menu.sl\
	menu.tr\
	menu.zh_CN\
	menu.zh_TW.Big5\
	plmenu\
	plmenu.da\
	plmenu.de\
	plmenu.fr\
	plmenu.hr\
	plmenu.it\
	plmenu.pl\
	plmenu.zh_CN\
	wmmacros\
	xtree.dat

EXTRA_DIST = $(prefsdata_DATA) mkMakefile


