AC_INIT(libwmfun/generic.h)
AM_INIT_AUTOMAKE(libwmfun, 0.0.4)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(libwmfun/config.h)

dnl FreeType Support
dnl ================
freetype=yes
AC_ARG_ENABLE(freetype,
[  --disable-freetype      disable FreeType 2 support],
        freetype=$enableval, freetype=yes, freetype=no)

if test "$freetype" = yes ; then
    WM_CHECK_LIB(freetype, FT_Init_FreeType, )

    if test "x$ac_cv_lib_freetype_FT_Init_FreeType" = xyes; then
        LIBS="$LIBS -lfreetype"
        AC_DEFINE(USE_FREETYPE)
    fi
fi

AC_OUTPUT([Makefile libwmfun/Makefile])
